[gd_scene load_steps=124 format=2]

[ext_resource path="res://Scenes - Players and NPCs/Player.gd" type="Script" id=1]
[ext_resource path="res://Weapons/Senjata.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player.png" type="Texture" id=3]
[ext_resource path="res://Scenes - Players and NPCs/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Weapons/shotgun.png" type="Texture" id=5]
[ext_resource path="res://Weapons/machine gun.png" type="Texture" id=6]
[ext_resource path="res://Audio - Sound Effect/tembak_busa_continue.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio - Sound Effect/footstep_2.wav" type="AudioStream" id=8]
[ext_resource path="res://Weapons/Pistol.png" type="Texture" id=9]
[ext_resource path="res://Audio - Sound Effect/tembak_shotgun.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio - Sound Effect/tembak pistol 2.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio - Sound Effect/Lempar_bom.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio - Sound Effect/tembak_rifle.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio - Sound Effect/dash.wav" type="AudioStream" id=14]
[ext_resource path="res://Lainnya/comment.png" type="Texture" id=15]
[ext_resource path="res://GUI/ARCADECLASSIC.TTF" type="DynamicFontData" id=16]
[ext_resource path="res://FX/shadows_32x32.png" type="Texture" id=17]
[ext_resource path="res://Scenes - Players and NPCs/Player_pesantext.gd" type="Script" id=18]
[ext_resource path="res://GUI/panahKuning.png" type="Texture" id=19]
[ext_resource path="res://FX/shiled_vfx.png" type="Texture" id=20]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 63, 33 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 63, 0, 63, 33 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.985437, 0.00227273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.5
angular_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 7.5
scale_curve = SubResource( 5 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "idle_nomask",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "dead_nomask",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "walk_nomask",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=40]
radius = 15.0
height = 10.3069

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="Gradient" id=42]
offsets = PoolRealArray( 0, 0.333333 )
colors = PoolColorArray( 0.666667, 0.666667, 0.666667, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=43]
gradient = SubResource( 42 )

[sub_resource type="Curve" id=44]
_data = [ Vector2( 0, 0.526136 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=45]
curve = SubResource( 44 )

[sub_resource type="ParticlesMaterial" id=46]
emission_shape = 1
emission_sphere_radius = 15.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 100, 0 )
angular_velocity = 120.0
orbit_velocity = 1.5
orbit_velocity_random = 0.5
scale = 5.0
scale_random = 1.0
scale_curve = SubResource( 45 )
color_ramp = SubResource( 43 )

[sub_resource type="Gradient" id=47]
colors = PoolColorArray( 0.270588, 0.247059, 0.992157, 1, 0.0235294, 0.0509804, 0.741176, 1 )

[sub_resource type="GradientTexture" id=48]
gradient = SubResource( 47 )

[sub_resource type="ParticlesMaterial" id=49]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_random = 0.75
color_ramp = SubResource( 48 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 20 )
region = Rect2( 448, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 20 )
region = Rect2( 896, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 20 )
region = Rect2( 1344, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 20 )
region = Rect2( 1792, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 20 )
region = Rect2( 0, 448, 448, 448 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 20 )
region = Rect2( 448, 448, 448, 448 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 20 )
region = Rect2( 896, 448, 448, 448 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 20 )
region = Rect2( 1344, 448, 448, 448 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 20 )
region = Rect2( 1792, 448, 448, 448 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 20 )
region = Rect2( 0, 896, 448, 448 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 20 )
region = Rect2( 448, 896, 448, 448 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 20 )
region = Rect2( 896, 896, 448, 448 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 20 )
region = Rect2( 1344, 896, 448, 448 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 20 )
region = Rect2( 1792, 896, 448, 448 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 20 )
region = Rect2( 0, 1344, 448, 448 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 20 )
region = Rect2( 448, 1344, 448, 448 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 20 )
region = Rect2( 896, 1344, 448, 448 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 20 )
region = Rect2( 1344, 1344, 448, 448 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 20 )
region = Rect2( 1792, 1344, 448, 448 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 20 )
region = Rect2( 0, 1792, 448, 448 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 20 )
region = Rect2( 448, 1792, 448, 448 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 20 )
region = Rect2( 896, 1792, 448, 448 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 20 )
region = Rect2( 1344, 1792, 448, 448 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 20 )
region = Rect2( 1792, 1792, 448, 448 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 20 )
region = Rect2( 0, 2240, 448, 448 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 20 )
region = Rect2( 448, 2240, 448, 448 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 20 )
region = Rect2( 896, 2240, 448, 448 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 20 )
region = Rect2( 1344, 2240, 448, 448 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 20 )
region = Rect2( 1792, 2240, 448, 448 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 20 )
region = Rect2( 0, 2688, 448, 448 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 20 )
region = Rect2( 448, 2688, 448, 448 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 20 )
region = Rect2( 896, 2688, 448, 448 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 20 )
region = Rect2( 1344, 2688, 448, 448 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 20 )
region = Rect2( 1792, 2688, 448, 448 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 20 )
region = Rect2( 0, 3136, 448, 448 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 20 )
region = Rect2( 448, 3136, 448, 448 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 20 )
region = Rect2( 896, 3136, 448, 448 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 20 )
region = Rect2( 1344, 3136, 448, 448 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 20 )
region = Rect2( 1792, 3136, 448, 448 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 20 )
region = Rect2( 0, 3584, 448, 448 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 20 )
region = Rect2( 448, 3584, 448, 448 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 20 )
region = Rect2( 896, 3584, 448, 448 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 20 )
region = Rect2( 1344, 3584, 448, 448 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 20 )
region = Rect2( 1792, 3584, 448, 448 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 20 )
region = Rect2( 0, 4032, 448, 448 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 20 )
region = Rect2( 448, 4032, 448, 448 )

[sub_resource type="SpriteFrames" id=97]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 853, 480 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 15 )
region = Rect2( 853, 0, 853, 480 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 15 )
region = Rect2( 1706, 0, 853, 480 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 15 )
region = Rect2( 2559, 0, 853, 480 )

[sub_resource type="SpriteFrames" id=102]
animations = [ {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=103]
size = 36
use_mipmaps = true
use_filter = true
extra_spacing_top = -5
extra_spacing_bottom = -5
font_data = ExtResource( 16 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 416, 218 )
collision_layer = 35
collision_mask = 51
script = ExtResource( 1 )

[node name="shadows_32x32" type="Sprite" parent="."]
position = Vector2( 0, 26.1 )
scale = Vector2( 0.75, 0.656 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="panah" type="Node2D" parent="."]
position = Vector2( -0.0803223, 22.7748 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="panah"]
position = Vector2( 32, 0 )
rotation = 1.5708
scale = Vector2( 0.8, 1 )
frames = SubResource( 3 )
playing = true

[node name="dashparticle" type="Particles2D" parent="."]
position = Vector2( 0, 28 )
amount = 16
lifetime = 0.5
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.5
local_coords = false
process_material = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 39 )
animation = "walk"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 6 )
shape = SubResource( 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 0, 17 )
scale = Vector2( 0.84375, 0.140625 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Weapon"]
position = Vector2( 9.48145, 7.11121 )
scale = Vector2( 0.156745, 0.755952 )
frames = SubResource( 41 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="dd_vfx" type="Particles2D" parent="Weapon"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 2.99078, 1.12891 )
scale = Vector2( 1.18519, 7.11111 )
amount = 24
process_material = SubResource( 46 )

[node name="ds_vfx" type="Particles2D" parent="Weapon"]
visible = false
modulate = Color( 0.960784, 1, 0.313726, 1 )
position = Vector2( 2.99078, 1.12891 )
scale = Vector2( 1.18519, 7.11111 )
amount = 16
process_material = SubResource( 46 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )
process_mode = 0
limit_left = -8000000
limit_top = -8000000
limit_right = 8000000
limit_bottom = 8000000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 20.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="vfx" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="haste_vfx" type="Particles2D" parent="vfx"]
visible = false
position = Vector2( 1.20825, 22.9832 )
amount = 16
lifetime = 0.4
local_coords = false
process_material = SubResource( 49 )

[node name="shield_vfx" type="AnimatedSprite" parent="vfx"]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 0.000158191, 5.00565 )
scale = Vector2( 0.118388, 0.159124 )
frames = SubResource( 97 )
frame = 37
playing = true

[node name="pesan" type="AnimatedSprite" parent="."]
position = Vector2( 68.3972, -65.351 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 102 )
frame = 3
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="pesan_text" type="Label" parent="pesan"]
margin_left = -133.0
margin_top = -45.0
margin_right = 134.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 103 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAKAI MASKER SAAT BEPERGIAN!"
autowrap = true
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Busa_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -25.0

[node name="Walk_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -30.0

[node name="Shotgun_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0

[node name="Pistol_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -25.0

[node name="Lempar_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -25.0

[node name="MachineGun_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -25.0

[node name="Dash_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -20.0
